# PromtAgent

./: ARCHITECTURE.md  ARCHITECTURE_HE.md  README.md
backend/: .env.example  .gitignore  alembic.ini  check_columns.py  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_triage_fields.py  0003_jira_fields.py  0004_ikb_schema.py  0005_agent_runs.py  0006_feedback_tables.py  0007_autonomy_tables.py
backend/app/: main.py
backend/app/api/: autonomy.py  feedback.py  incidents.py  knowledge.py  metrics.py  webhooks.py  ws.py
backend/app/core/: config.py  deps.py  errors.py  logging.py
backend/app/db/: models.py  session.py
backend/app/schemas/: alert.py  incident.py
backend/app/services/agent/: actions.py  checklists.py  executor.py  investigator.py  parser.py  prompts.py  tool_adapter.py
backend/app/services/autonomy/: circuit_breaker.py  executor.py  rollback.py  shadow_mode.py  tier_manager.py
backend/app/services/feedback/: action_metrics.py  events.py  host_statistics.py  orchestrator.py  pattern_detector.py  re_embedding.py  recurrence_detector.py
backend/app/services/ikb/: baselines.py  embeddings.py  enrichment.py  incident_embedder.py  (+1 more)
backend/app/tasks/: feedback_jobs.py
backend/app/tools/: README.md  base.py  executor.py  registry.py
backend/config/: actions.yaml  classification_rules.yaml
backend/docs/: autonomy_runbook.md  jira_setup.md
backend/tests/: conftest.py  test_tool_registry.py  test_webhooks.py
backend/tests/services/: test_investigator.py  test_triage.py
(+82 files in other folders)
