[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "noc-agent"
version = "0.1.0"
description = "NOC Intelligent Alert Management System"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "structlog>=24.2",
    "httpx>=0.27",
    "redis[hiredis]>=5.0",
    "anthropic>=0.30",
    "pgvector>=0.3",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "testcontainers[postgres]>=4.7",
    "httpx>=0.27",
    "anyio>=4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["app"]
